# streamwatch-api

./: .env  .gitignore  README.md  config.py  main.py  new-redis.md  nixpacks.toml  pyproject.toml  pytest.ini  redis-setup.md  requirements.txt  streamwatch-back
.beads/: issues.jsonl
.github/: dependabot.yml
.github/workflows/: test.yml
app/: cache.py  exceptions.py  middleware.py  models.py  rate_limit.py  session_pool.py  utils.py  validators.py
app/routers/: streams.py
app/services/: liveness_worker.py  stream_service.py  supabase_service.py
tests/: conftest.py  test_cache.py  test_liveness_worker.py  test_main.py  test_middleware.py  test_routers.py  test_services.py  test_stream_service.py  test_supabase_service.py  test_validators.py
