[project]
name = "streamlink-api"
version = "0.1.0"
description = "FastAPI-based Streamlink API for stream resolution and status checking"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlink>=8.1.0",
    "fastapi>=0.127.0",
    "uvicorn>=0.40.0",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.0.0",
    "supabase>=2.11.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
    "memory-profiler>=0.61.0",
]
