[project]
name = "streamlink-api"
version = "0.1.0"
description = "FastAPI-based Streamlink API for stream resolution and status checking"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "streamlink>=8.2.1",
    "fastapi>=0.135.2",
    "uvicorn>=0.42.0",
    "gunicorn>=25.3.0",
    "python-dotenv>=1.2.2",
    "redis>=5.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "memory-profiler>=0.61.0",
    "pytest>=7.0.0",
    "pip-audit>=2.6.0",
]
